# airas-20251008-043007-matsuzawa

./: .gitignore  pyproject.toml
.research/: research_history.json
.research/iteration1/: .nfs0000000003af8e0000002023  error.txt  output.txt
.research/iteration1/AdaNPC-full/: results.json  run_config.yaml
.research/iteration1/AdaNPC-full_fake/: run_config.yaml
.research/iteration1/AdaNPC-τ0.25/: results.json  run_config.yaml
.research/iteration1/AdaNPC-τ0.5/: results.json  run_config.yaml
.research/iteration1/AdaNPC-τ1.0/: results.json  run_config.yaml
.research/iteration1/SGD-adapter/: results.json  run_config.yaml
.research/iteration1/Tent-τ0.25/: results.json  run_config.yaml
.research/iteration1/adanpc_tau0.25_fake/: run_config.yaml
.research/iteration1/adanpc_tau0.5_fake/: results.json  run_config.yaml
.research/iteration1/adanpc_tau1.0_fake/: results.json  run_config.yaml
.research/iteration1/fixed-Fisher/: results.json  run_config.yaml
.research/iteration1/imagenet_resnet50_adanpc/: results.json  run_config.yaml
.research/iteration1/imagenet_resnet50_eata/: results.json  run_config.yaml
.research/iteration1/imagenet_resnet50_proxtta/: results.json  run_config.yaml
.research/iteration1/imagenet_resnet50_source/: results.json  run_config.yaml
.research/iteration1/imagenet_resnet50_tent/: results.json  run_config.yaml
.research/iteration1/imagenet_vitb16_source/: run_config.yaml
.research/latex/iclr2024/: .chktexrc  (+6 more)
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+147 files in other folders)
