[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adanpc_experiments"
version = "0.1.0"
description = "Adaptive Natural-gradient Probabilistically-Certified TTA experiments"
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
torch = "*"
torchvision = "*"
pyyaml = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"
tqdm = "*"
datasets = "*"
timm = "*"
